contact phone number

--- a/plugins/ss-event-dates/addons/intl-tel/demo.html
+++ b/plugins/ss-event-dates/addons/intl-tel/demo.html
@@ -20,8 +20,8 @@
   <script src="build/js/intlTelInput.js"></script>
   <script>
     $("#phone").intlTelInput({
-      // allowDropdown: false,
-      // autoHideDialCode: false,
+       allowDropdown: false,
+       autoHideDialCode: true,
       // autoPlaceholder: false,
       // dropdownContainer: "body",
       // excludeCountries: ["us"],
@@ -36,7 +36,7 @@
       // numberType: "MOBILE",
       // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
       // preferredCountries: ['cn', 'jp'],
-      // separateDialCode: true,
+       separateDialCode: true,
       utilsScript: "build/js/utils.js"
     });
   </script>
